--- a/style.css
+++ b/style.css
@@ -1,237 +1,350 @@
 body {
-	background-color: none;
-	font-family: "NHHandwriting";
-	background-image: url(images/IY2.JPG);
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	height: 100vh;
-	width: 100vw;
+  background-color: none;
+  font-family: "NHHandwriting";
+  background-image: url(images/IY2.JPG);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
 }
 
 .home {
-	padding: 5vh 0px 0px 0px;
-
+  padding: 5vh 0px 0px 0px;
 }
 
 .profileDiv {
-	border: 1px solid black;
-	box-sizing: border-box;
-	border-radius: 8px;
-	margin: 2px 0px 0px 5vw;
-	height: 10vh;
-	min-height: 50px;
-	width: 40vw;
-	min-width: 200px;
-	display: grid;
-	grid-template-columns: 52% 24% 24%; 
-	transition: all .5s linear;
+  border: 1px solid black;
+  box-sizing: border-box;
+  border-radius: 8px;
+  margin: 2px 0px 0px 5vw;
+  height: 10vh;
+  min-height: 50px;
+  width: 40vw;
+  min-width: 200px;
+  display: grid;
+  grid-template-columns: 52% 24% 24%;
+  transition: all 0.5s linear;
 }
 .profileDiv:hover {
-	border: 4px solid black;
-	width: 60vw;
-	margin: 2px 0px 0px 20vw;
-	cursor: pointer;
+  border: 4px solid black;
+  width: 60vw;
+  margin: 2px 0px 0px 20vw;
+  cursor: pointer;
 }
 .profileName {
-	text-align: center;
-	justify-self: center;
-
+  text-align: center;
+  justify-self: center;
 }
 .profileLatestDate {
-	text-align: center;
-	justify-self: center;
-
+  text-align: center;
+  justify-self: center;
 }
 .profileLevel {
-	text-align: center;
-	height: calc(10vh - 4px);
-	min-height: 46px;
-	width: calc(10vh - 4px);
-	min-width: 46px;
-	justify-self: center;
-	margin-top: 2px;
+  text-align: center;
+  height: calc(10vh - 4px);
+  min-height: 46px;
+  width: calc(10vh - 4px);
+  min-width: 46px;
+  justify-self: center;
+  margin-top: 2px;
 }
 .profileDiv:hover .profileLevel {
-	margin-top: 0px;
+  margin-top: 0px;
 }
 
-
-
-
 .modal {
-	position: fixed;
-	height: 90vh;
-	width: calc(90vw + 22px);
-	background-color: white;
-	border: 2px solid black;
-	box-sizing: border-box;
-	border-radius: 8px;
-	box-shadow: 0px 0px 4px 4px;
-	left: 5vw;
-	top: 5vh;
-	overflow: scroll;
-	background-image: url(images/IY1.JPG);
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+  position: fixed;
+  height: 90vh;
+  width: calc(90vw + 22px);
+  background-color: white;
+  border: 2px solid black;
+  box-sizing: border-box;
+  border-radius: 8px;
+  box-shadow: 0px 0px 4px 4px;
+  left: 5vw;
+  top: 5vh;
+  overflow: scroll;
+  background-image: url(images/IY1.JPG);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 .backdrop {
-	position: fixed;
-	height: 100vh;
-	width: 100vw;
-	left: 0;
-	top: 0;
-	background-color: black;
-	cursor: pointer;
-	opacity: 70%;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  background-color: black;
+  cursor: pointer;
+  opacity: 70%;
 }
 
-
 .modalTitle {
-	text-align: center;
-	font-size: calc(2vh + 2vw);
-	height: 9vh;
-	background-color: rgba(255, 182, 193, 0.699);
-	padding: 1vh 0px 0px 0vh;
-	min-width: 800px;
-	width: 90vw;
-	grid-column: 1/3;
+  text-align: center;
+  font-size: calc(2vh + 2vw);
+  height: 9vh;
+  background: linear-gradient(
+    to bottom,
+    white 0%,
+    rgba(26, 169, 208, 0.7) 100%
+  );
+  padding: 1vh 0px 0px 0vh;
+  min-width: 800px;
+  width: 90vw;
+  grid-column: 1/3;
 }
 
 .levelAndSpeechHolder {
-	width: 90vw;
-	display: grid;
-	min-width: 800px;
-
+  width: 90vw;
+  display: grid;
+  min-width: 800px;
 }
 
 .levelHolder {
-	border: none;
-	background-color: none;
-	width: 20vw;
-	min-width: 50px;
-	display: grid;
-	justify-self:center;
-	grid-template-columns: 100%;
-	min-width: 200px;
-	grid-column: 1/2;
-	padding: 0px 0px 20px 0px;
+  border: none;
+  background-color: none;
+  width: 20vw;
+  min-width: 50px;
+  display: grid;
+  justify-self: center;
+  grid-template-columns: 100%;
+  min-width: 200px;
+  grid-column: 1/2;
+  padding: 0px 0px 20px 0px;
 }
-.levelIcon{
-	border: none;
-	height: calc(10vh - 4px);
-	min-height: 46px;
-	width: calc(10vh - 4px);
-	min-width: 46px;
-	justify-self:center;
-	background-color: none;
-	margin-top: 50px;
+.levelIcon {
+  border: none;
+  height: calc(10vh - 4px);
+  min-height: 46px;
+  width: calc(10vh - 4px);
+  min-width: 46px;
+  justify-self: center;
+  background-color: none;
+  margin-top: 50px;
 }
 .speechesHolder {
-	border: none;
-	background-color: blue;
-	width: 70vw;
-	display: grid;
-	grid-template-columns: 100%;
-	min-width: 600px;
-	grid-column: 2/3;
-	padding: 0px 0px 10px 0px;
+  border: none;
+  background-color: blue;
+  width: 70vw;
+  display: grid;
+  grid-template-columns: 100%;
+  min-width: 600px;
+  grid-column: 2/3;
+  padding: 0px 0px 10px 0px;
 }
 .speechHolder {
-	text-align: center;
-	border: none;
-	border-radius: 16px;
-	box-sizing: border-box;
-	box-shadow: 0px 0px 2px 2px;
-	font-size: 25px;
-	height: 50px;
-	width: 50vw;
-	min-width: 600px;
-	margin-top: 10px;
-	padding-top: 7px;
-	cursor: pointer;
-
+  text-align: center;
+  border: none;
+  border-radius: 16px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 2px 2px;
+  font-size: 25px;
+  height: 50px;
+  width: 50vw;
+  min-width: 600px;
+  margin-top: 10px;
+  padding-top: 7px;
+  cursor: pointer;
 }
 .speechHolder:hover {
-	padding-top: 5px;
-	font-weight: bold;
-	border: 3px double black;;
+  padding-top: 5px;
+  font-weight: bold;
+  border: 3px double black;
 }
 
 .dropDownModal {
-	position: fixed;
-	height: 55vh;
-	width: 50vw;
-	min-width: 400px;
-	background-color: white;
-	border: 2px solid black;
-	box-sizing: border-box;
-	border-radius: 8px;
-	box-shadow: 0px 0px 4px 4px;
-	left: 25vw;
-	top: 0vh;
-	overflow: hidden;
-	display:grid;
-	padding: 10px;
-	background-image: url(images/IY3.JPG);
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+  position: fixed;
+  height: 70vh;
+  width: 70vw;
+  min-width: 400px;
+  background-color: white;
+  border: 2px solid black;
+  box-sizing: border-box;
+  border-radius: 8px;
+  box-shadow: 0px 0px 4px 4px;
+  left: 15vw;
+  top: 10vh;
+  overflow: hidden;
+  display: grid;
+  padding: 10px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),  url(images/IY3.JPG) top left / 100% 100% no-repeat;
+
 }
 
-.dropDownModal p{
-	font-size: calc(3vh + 2vw);
-	margin: 0;
-	padding:0;
-	text-align: center;
-	justify-self: center;
-	grid-column: 1/3;
-	text-shadow:  1px 1px 0px white, -1px -1px 0px white, -1px 1px 0px white, 1px -1px 0px white;
+.dropDownModal p {
+  font-size: calc(3vh + 2vw);
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  justify-self: center;
+  grid-column: 1/3;
+  text-shadow: 1px 1px 0px white, -1px -1px 0px white, -1px 1px 0px white,
+    1px -1px 0px white;
+  filter: brightness(150%)
 }
 
-.dropDownModal p:nth-child(2){
-	color: maroon;
-	grid-column: 1/2;
+.dropDownModal p:nth-child(2) {
+  color: maroon;
+  grid-column: 1/2;
 }
-.dropDownModal p:nth-child(3){
-	color: black;
-	grid-column: 2/3;
+.dropDownModal p:nth-child(3) {
+  color: black;
+  grid-column: 2/3;
 }
-.dropDownModal p:nth-child(4){
-	color: maroon;
-	grid-column: 1/2;
+.dropDownModal p:nth-child(4) {
+  color: maroon;
+  grid-column: 1/2;
 }
-.dropDownModal p:nth-child(5){
-	color: black;
-	grid-column: 2/3;
+.dropDownModal p:nth-child(5) {
+  color: black;
+  grid-column: 2/3;
 }
-.dropDownModal p:nth-child(6){
-	color: maroon;
-	grid-column: 1/2;
+.dropDownModal p:nth-child(6) {
+  color: maroon;
+  grid-column: 1/2;
 }
-.dropDownModal p:nth-child(7){
-	color: black;
-	grid-column: 2/3;
+.dropDownModal p:nth-child(7) {
+  color: black;
+  grid-column: 2/3;
 }
-
 
 .shake {
-	animation: .3s linear 1 shaken;
+  animation: 0.3s linear 1 shaken;
 }
 
 @keyframes shaken {
-	0% {
-		margin-left: 50px;
-	}
-	25% {
-		margin-left: -50px;
-	}
-	50% {
-		margin-left: 50px;
-	}
-	75% {
-		margin-left: -50px;
-	}
-	100% {
-		margin-left: 0px;
-	}
+  0% {
+    margin-left: 50px;
+  }
+  25% {
+    margin-left: -50px;
+  }
+  50% {
+    margin-left: 50px;
+  }
+  75% {
+    margin-left: -50px;
+  }
+  100% {
+    margin-left: 0px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .profileDiv {
+    border: 1px solid black;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin: 2px 0px 0px 5vw;
+    height: 10vh;
+    min-height: 50px;
+    width: 80vw;
+    min-width: 200px;
+    display: grid;
+    grid-template-columns: 52% 24% 24%;
+    transition: all 0.5s linear;
+  }
+
+  .modal {
+    position: fixed;
+    height: 90vh;
+    width: 90vw;
+    left: 5vw;
+    top: 5vh;
+    overflow: scroll;
+    background-image: url(images/IY1.JPG);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+  }
+  .levelAndSpeechHolder {
+    min-width: 90%;
+  }
+
+  .modalTitle {
+    text-align: center;
+    font-size: calc(2vh + 2vw);
+    height: 9vh;
+    background-color: rgba(255, 182, 193, 0.699);
+    padding: 1vh 0px 0px 0vh;
+    min-width: 90vw;
+    width: 90vw;
+    grid-column: 1/3;
+  }
+
+  .levelHolder {
+    border: none;
+    background-color: none;
+    width: 100%;
+    min-width: 50px;
+    display: grid;
+    justify-self: center;
+    grid-template-columns: 100%;
+    min-width: 15vw;
+    grid-column: 1/2;
+    padding: 0px 0px 20px 0px;
+  }
+  .levelIcon {
+    border: none;
+    height: calc(10vh - 4px);
+    min-height: 46px;
+    width: calc(10vh - 4px);
+    min-width: 46px;
+    justify-self: center;
+    background-color: none;
+    margin-top: 50px;
+  }
+  .speechesHolder {
+    border: none;
+    background-color: blue;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    min-width: 100%;
+    grid-column: 2/3;
+    padding: 0px 0px 10px 0px;
+  }
+  .speechHolder {
+    text-align: center;
+    border: none;
+    border-radius: 16px;
+    box-sizing: border-box;
+    box-shadow: 0px 0px 2px 2px;
+    font-size: 15px;
+    height: 50px;
+    width: 90%;
+    min-width: 90%;
+    margin-top: 10px;
+    margin-left: 5%;
+    padding-top: 7px;
+    cursor: pointer;
+  }
+
+  .dropDownModal {
+    position: fixed;
+    height: 70vh;
+    width: 80vw;
+    min-width: 40px;
+    background-color: white;
+    border: 2px solid black;
+    box-sizing: border-box;
+    border-radius: 8px;
+    box-shadow: 0px 0px 4px 4px;
+    left: 10vw;
+    top: 15vh;
+    overflow: hidden;
+    display: grid;
+    padding: 10px;
+  }
+
+  .dropDownModal p {
+    font-size: calc(3vh + 2vw);
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    justify-self: center;
+    grid-column: 1/3;
+    text-shadow: 1px 1px 0px white, -1px -1px 0px white, -1px 1px 0px white,
+      1px -1px 0px white;
+  }
 }
